objects/My_Forecast__c.object
<CustomObject>
    <fields>
        <fullName>Current_Year__c</fullName>
        <defaultValue>Year(Today())</defaultValue>
        <label>Current Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>My_Land_Forecast__c</fullName>
        <label>My Land Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Booked__c</fullName>
        <description>This field is Sum of Opportunity amount  based on the  Forecast status - 0.Booked</description>
        <inlineHelpText>This field is Sum of Opportunity amount  based on the  Forecast status - 0.Booked</inlineHelpText>
        <label>Total Booked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Commit__c</fullName>
        <label>Total Commit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_In_Hand__c</fullName>
        <description>This field is Sum of Opportunity amount  based on the  Forecast status - 1. In Hand</description>
        <inlineHelpText>This field is Sum of Opportunity amount  based on the  Forecast status - 1. In Hand</inlineHelpText>
        <label>Total In Hand</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Upside__c</fullName>
        <label>Total Upside</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unique_Record_Key__c</fullName>
        <label>Unique Record Key</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UserID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User ID</label>
        <referenceTo>User</referenceTo>
        <relationshipName>My_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Full_Name__c</fullName>
        <formula>$User.LastName + &apos; &apos; +  $User.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Full Name</label>
        <type>Text</type>
    </fields>
    <label>My Forecast</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FRCST-{00000}</displayFormat>
        <label>My Forecast</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>My Forecasts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>